apps/base/web_static/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: robin-static-svc
  labels:
    app: robin-static
  namespace: dev
spec:
  selector:
    app: robin-static
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
