apps/base/web_static/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: robin-static-svc
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
    - host: robin.daxter.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: robin-static-svc
                port:
                  number: 80
